@@ -243,6 +243,20 @@ name|jayasoft
 operator|.
 name|ivy
 operator|.
+name|report
+operator|.
+name|ResolveReport
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
 name|url
 operator|.
 name|URLHandlerDispatcher
@@ -1557,8 +1571,8 @@ operator|new
 name|Date
 argument_list|()
 decl_stmt|;
-name|ModuleDescriptor
-name|md
+name|ResolveReport
+name|report
 init|=
 name|ivy
 operator|.
@@ -1579,6 +1593,11 @@ name|date
 argument_list|,
 name|validate
 argument_list|)
+decl_stmt|;
+name|ModuleDescriptor
+name|md
+init|=
+name|report
 operator|.
 name|getModuleDescriptor
 argument_list|()
