@@ -1,0 +1,8 @@
+<ivy-module version="1.0"> 
+	<info organisation="orgfailure"
+	       module="modfailure"
+	       revision="1.0"
+	       status="release"
+	/>
+	<badtag/>
+</ivy-module>
